[package]
name = "cond_sync"
version = "0.2.2"
edition = "2024"
rust-version = "1.85"

description = "Hides the boilerplate code needed with std::sync::Condvar"
readme = true
repository = "https://github.com/emabee/rust-cond_sync"
license = "MIT OR Apache-2.0"
keywords = ["concurrency", "synchronization"]
categories = ["concurrency"]

[dependencies]

[dev-dependencies]
version-sync = "0.9"

[lints.rust]
unsafe_code = "forbid"
